<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.c2c.learnopedia.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/footer"
        android:layout_centerHorizontal="true"/>


    <LinearLayout android:layout_alignParentBottom="true"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:layout_marginTop="@dimen/edit_text_margin"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/countryCode"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@drawable/button_border"
                android:layout_gravity="center"
                android:spinnerMode="dropdown"
                android:textDirection="firstStrong" />


            <EditText
                android:id="@+id/mobile_number_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_phone_no"
                android:inputType="number"
                android:maxLength="10"
                android:layout_marginLeft="@dimen/button_margin"
                android:padding="@dimen/edit_text_padding"
                android:background="@drawable/button_border"
                android:cursorVisible="true"
                android:textSize="15dp"
                android:textCursorDrawable="@drawable/color_cursor" />
            <requestFocus/>

        </LinearLayout>

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->

        <!--app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout" >-->

            <!--<AutoCompleteTextView-->
                <!--android:id="@+id/mobile_number_ed"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/prompt_email"-->
                <!--android:inputType="number"-->
                <!--android:textColor="@color/button_normal_balck"-->
                <!--android:maxLines="1"-->
                <!--android:maxLength="10"-->
                <!--android:singleLine="true" />-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/login_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/login_btn_color"/>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/sign_up_btn_color"/>

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_32"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"/>



    </LinearLayout>

</RelativeLayout>
